Adds toolbar with refresh button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CTK Handicap Map</string>
     <string name="title_activity_maps">Handicap Map</string>
+    <string name="refresh">Refresh</string>
 </resources>
