--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CTK Handicap Map</string>
-    <string name="title_activity_maps">Handicap Map</string>
     <string name="refresh">Refresh</string>
+    <string name="max_parking">Max parking time:</string>
+    <string name="parking_count">Parking spots:</string>
 </resources>
